--- a/VektoriaApp/VektoriaApp.vcxproj
+++ b/VektoriaApp/VektoriaApp.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="CherryBlossomTree.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Island.h" />
+    <ClInclude Include="Poppy.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClCompile Include="CherryBlossomTree.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Island.cpp" />
+    <ClCompile Include="Poppy.cpp" />
     <ClCompile Include="VektoriaApp.cpp" />
   </ItemGroup>
   <ItemGroup>
