--- a/VektoriaApp/VektoriaApp.vcxproj.filters
+++ b/VektoriaApp/VektoriaApp.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Forest.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadPool.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
