--- a/VektoriaApp/VektoriaApp.vcxproj
+++ b/VektoriaApp/VektoriaApp.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Island.h" />
     <ClInclude Include="Player\Butterfly.h" />
     <ClInclude Include="Player\KeyboardControl.h" />
+    <ClInclude Include="Player\Player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="ThreadPool.h" />
@@ -171,6 +172,7 @@
     <ClCompile Include="Island.cpp" />
     <ClCompile Include="Player\Butterfly.cpp" />
     <ClCompile Include="Player\KeyboardControl.cpp" />
+    <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="VektoriaApp.cpp" />
   </ItemGroup>
   <ItemGroup>
