--- a/VektoriaApp/VektoriaApp.vcxproj.filters
+++ b/VektoriaApp/VektoriaApp.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Player\KeyboardControl.h">
       <Filter>Headerdateien\Player</Filter>
     </ClInclude>
+    <ClInclude Include="Player\Player.h">
+      <Filter>Headerdateien\Player</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -93,6 +96,9 @@
       <Filter>Quelldateien\Player</Filter>
     </ClCompile>
     <ClCompile Include="Player\KeyboardControl.cpp">
+      <Filter>Quelldateien\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Player\Player.cpp">
       <Filter>Quelldateien\Player</Filter>
     </ClCompile>
   </ItemGroup>
