--- a/VektoriaApp/VektoriaApp.vcxproj
+++ b/VektoriaApp/VektoriaApp.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Collectable.h" />
     <ClInclude Include="Forest\Forest.h" />
     <ClInclude Include="Forest\ForestCluster.h" />
     <ClInclude Include="Forest\Geos\CherryBlossomTree.h" />
@@ -165,8 +166,10 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="ThreadPool.h" />
+    <ClInclude Include="Utils\PlacementUtils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Collectable.cpp" />
     <ClCompile Include="Forest\Forest.cpp" />
     <ClCompile Include="Forest\ForestCluster.cpp" />
     <ClCompile Include="Forest\Geos\CherryBlossomTree.cpp" />
@@ -179,6 +182,7 @@
     <ClCompile Include="Player\Controller.cpp" />
     <ClCompile Include="Player\KinematicPlacement.cpp" />
     <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Utils\PlacementUtils.cpp" />
     <ClCompile Include="VektoriaApp.cpp" />
   </ItemGroup>
   <ItemGroup>
