--- a/VektoriaApp/VektoriaApp.vcxproj
+++ b/VektoriaApp/VektoriaApp.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{875CCC02-C17C-4145-A074-6C7FB9250A48}</ProjectGuid>
     <RootNamespace>VektoriaApp</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -158,6 +158,7 @@
     <ClInclude Include="Forest\Geos\Nadelbaum.h" />
     <ClInclude Include="Forest\PlantPlacement.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GeoBioJapanischerSchildfarn.h" />
     <ClInclude Include="Island.h" />
     <ClInclude Include="Player\Butterfly.h" />
     <ClInclude Include="Player\Controller.h" />
@@ -177,6 +178,7 @@
     <ClCompile Include="Forest\Geos\GeoBioPoppy.cpp" />
     <ClCompile Include="Forest\Geos\Nadelbaum.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GeoBioJapanischerSchildfarn.cpp" />
     <ClCompile Include="Island.cpp" />
     <ClCompile Include="Player\Butterfly.cpp" />
     <ClCompile Include="Player\Controller.cpp" />
